--- a/lab_stats.ipynb
+++ b/lab_stats.ipynb
@@ -5,10 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pymaceuticals Inc.\n",
-    "---\n",
-    "\n",
-    "### Analysis\n",
+    "### Analysis Summary\n",
     "\n",
     "- There are 249 mice total, most of which showed a decline in tumor volume over time.\n",
     "- There doesn't seem to be a strong correlation between weight and tumor volume; this correlation was moderate.\n",
@@ -18,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -209,36 +206,36 @@
        "[1893 rows x 8 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Dependencies and Setup\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import scipy.stats as st\n",
     "\n",
-    "# Study data files\n",
     "mouse_metadata_path = \"data/Mouse_metadata.csv\"\n",
     "study_results_path = \"data/Study_results.csv\"\n",
     "\n",
-    "# Read the mouse data and the study results\n",
     "mouse_metadata = pd.read_csv(mouse_metadata_path)\n",
     "study_results = pd.read_csv(study_results_path)\n",
     "\n",
-    "# Combine the data into a single DataFrame\n",
     "total_data = pd.merge(mouse_metadata, study_results, how=\"left\")\n",
-    "\n",
-    "\n",
-    "# Display the data table for preview\n",
     "total_data"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Analysis"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -247,21 +244,19 @@
        "249"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Checking the number of mice.\n",
-    "# 112358 count the number of unique values in a column\n",
     "number_mice = total_data[\"Mouse ID\"].nunique()\n",
     "number_mice"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -332,30 +327,19 @@
        "909                45.0                 0  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Our data should be uniquely identified by Mouse ID and Timepoint\n",
-    "# Get the duplicate mice by ID number that shows up for Mouse ID and Timepoint.\n",
-    "try_again = total_data[total_data.duplicated(subset=['Mouse ID', 'Tumor Volume (mm3)'], keep=False)]\n",
-    "try_again\n"
+    "dupe_mice = total_data[total_data.duplicated(subset=['Mouse ID', 'Tumor Volume (mm3)'], keep=False)]\n",
+    "dupe_mice\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Optional: Get all the data for the duplicate mouse ID. \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -546,20 +530,19 @@
        "[249 rows x 8 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Create a clean DataFrame by dropping the duplicate mouse by its ID.\n",
     "clean_data = total_data.drop_duplicates(subset=\"Mouse ID\")\n",
     "clean_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -568,13 +551,12 @@
        "249"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Checking the number of mice in the clean DataFrame.\n",
     "cleandata_micecount = len(clean_data[\"Mouse ID\"])\n",
     "cleandata_micecount"
    ]
@@ -588,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -740,13 +722,13 @@
        "Zoniferol     0.516398  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
+    "# Statistics summary - mean, median, variance, standard deviation, SEM of tumor volume for each regimen\n",
     "drug_mean = total_data.groupby(\"Drug Regimen\")[\"Tumor Volume (mm3)\"].mean()\n",
     "drug_median = total_data.groupby(\"Drug Regimen\")[\"Tumor Volume (mm3)\"].median()\n",
     "drug_var = total_data.groupby(\"Drug Regimen\")[\"Tumor Volume (mm3)\"].var()\n",
@@ -762,24 +744,7 @@
     "}\n",
     "\n",
     "drug_df = pd.DataFrame(drug_dict)\n",
-    "drug_df\n",
-    "\n",
-    "\n",
-    "# Use groupby and summary statistical methods to calculate the following properties of each drug regimen: \n",
-    "# mean, median, variance, standard deviation, and SEM of the tumor volume. \n",
-    "# Assemble the resulting series into a single summary DataFrame.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# A more advanced method to generate a summary statistics table of mean, median, variance, standard deviation,\n",
-    "# and SEM of the tumor volume for each regimen (only one method is required in the solution)\n",
-    "\n",
-    "# Using the aggregation method, produce the same summary statistics in a single line\n"
+    "drug_df"
    ]
   },
   {
@@ -791,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +771,7 @@
     }
    ],
    "source": [
-    "# Generate a bar plot showing the total number of rows (Mouse ID/Timepoints) for each drug regimen using Pandas.\n",
+    "# Total number of rows (Mouse ID/Timepoints) for each regimen\n",
     "plot_time = total_data.groupby('Drug Regimen')['Mouse ID'].count()\n",
     "plot_drug = total_data['Drug Regimen'].unique()\n",
     "plot_drug\n",
@@ -815,24 +780,14 @@
     "    \"Drug Regimen\": plot_drug\n",
     "}\n",
     "plt_df = pd.DataFrame(plot_dict, columns=plot_dict)\n",
-    "# plt_df\n",
-    "# plot_columns = ['Drug Regimen', plot_time]\n",
+    "\n",
     "bar_chart = plt_df['Timepoint'].plot(kind=\"bar\", ylabel='# of Observed Mouse Timepoints')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Generate a bar plot showing the total number of rows (Mouse ID/Timepoints) for each drug regimen using pyplot.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -847,19 +802,10 @@
     }
    ],
    "source": [
-    "# Generate a pie plot showing the distribution of female versus male mice using Pandas\n",
+    "# Female versus male mice\n",
     "plot_sex = clean_data['Sex'].value_counts('male')\n",
     "pie_plot = plot_sex.plot(kind=\"pie\", autopct='%1.1f%%')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Generate a pie plot showing the distribution of female versus male mice using pyplot\n"
    ]
   },
   {
@@ -871,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1111,19 +1057,16 @@
        "[100 rows x 11 columns]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Calculate the final tumor volume of each mouse across four of the treatment regimens:  \n",
-    "# Capomulin, Ramicane, Infubinol, and Ceftamin\n",
-    "\n",
-    "# Start by getting the last (greatest) timepoint for each mouse\n",
+    "# Last timepoint for each mouse\n",
     "greatest_timepoints = total_data.groupby('Mouse ID').agg({'Timepoint': 'max', 'Drug Regimen': 'first', 'Tumor Volume (mm3)': 'first'}).reset_index()\n",
     "\n",
-    "# Merge this group df with the original DataFrame to get the tumor volume at the last timepoint\n",
+    "# tumor volume at the last timepoint\n",
     "first_last_timepoint = pd.merge(greatest_timepoints, clean_data, on='Mouse ID')\n",
     "select_drugs = first_last_timepoint[first_last_timepoint['Drug Regimen_x'].isin(['Capomulin', 'Ramicane', 'Infubinol', 'Ceftamin'])]\n",
     "select_drugs\n",
@@ -1132,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1149,13 +1092,12 @@
     }
    ],
    "source": [
-    "# Put treatments into a list for for loop (and later for plot labels)\n",
+    "# List of treatments for loop\n",
     "drugs = ['Capomulin', 'Ramicane', 'Infubinol', 'Ceftamin']\n",
     "\n",
-    "# Create empty list to fill with tumor vol data (for plotting)\n",
     "tumor_vol = []\n",
     "\n",
-    "# Calculate the IQR and quantitatively determine if there are any potential outliers. \n",
+    "# IQR, outliers\n",
     "quartile_column = select_drugs['Tumor Volume (mm3)_x']\n",
     "quartiles = quartile_column.quantile([.25,.5,.75])\n",
     "lowerq = quartiles[0.25]\n",
@@ -1165,29 +1107,17 @@
     "print(f\"The upper quartile of tumor volumes is: {upperq}\")\n",
     "print(f\"The interquartile range of tumor volumes is: {iqr}\")\n",
     "print(f\"The median tumor volume is: {quartiles[.5]}\")\n",
-    "    \n",
-    "    # Locate the rows which contain mice on each drug and get the tumor volumes\n",
     "\n",
-    "    \n",
-    "    # add subset \n",
-    "\n",
-    "    \n",
-    "    # Determine outliers using upper and lower bounds\n",
     "lower_bound = lowerq - (1.5*iqr)\n",
     "upper_bound = upperq + (1.5*iqr)\n",
     "\n",
     "print(f\"The lower bound is: {lower_bound}\")\n",
-    "print(f\"The upper bound is: {upper_bound}\")\n",
-    "\n",
-    "# print(\"Capomulin's potential outliers: \")\n",
-    "# print(\"Ramicane's potential outliers: \")\n",
-    "# print(\"Infubinol's potential outliers: \")\n",
-    "# print(\"Ceftamin's potential outliers: \")"
+    "print(f\"The upper bound is: {upper_bound}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1202,11 +1132,10 @@
     }
    ],
    "source": [
-    "# Generate a box plot that shows the distrubution of the tumor volume for each treatment group.\n",
+    "# Box plot - tumor volume for each treatment group\n",
     "four_drugs = ['Capomulin', 'Ramicane', 'Infubinol', 'Ceftamin']\n",
     "filtered_df = total_data.loc[total_data['Drug Regimen'].isin(four_drugs)]\n",
     "result = filtered_df['Tumor Volume (mm3)']\n",
-    "# print(result)\n",
     "\n",
     "box_plot = result.plot(kind=\"box\", xlabel='Drug Regimen', ylabel='Tumor Volume (mm3)')"
    ]
@@ -1220,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1235,7 +1164,7 @@
     }
    ],
    "source": [
-    "# Generate a line plot of tumor volume vs. time point for a single mouse treated with Capomulin\n",
+    "# Line plot - tumor volume vs. time point for a single mouse treated with Capomulin\n",
     "mouse_df = total_data.set_index(\"Mouse ID\")\n",
     "single_mouse = mouse_df.loc['s185']\n",
     "\n",
@@ -1248,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1263,7 +1192,7 @@
     }
    ],
    "source": [
-    "# Generate a scatter plot of mouse weight vs. the average observed tumor volume for the entire Capomulin regimen\n",
+    "# Scatter plot - mouse weight vs average tumor volume for entire Capomulin regimen\n",
     "capomulin_df = total_data.set_index('Drug Regimen')\n",
     "capomulin_only = capomulin_df.loc['Capomulin']\n",
     "\n",
@@ -1280,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1292,8 +1221,7 @@
     }
    ],
    "source": [
-    "# Calculate the correlation coefficient and a linear regression model \n",
-    "# for mouse weight and average observed tumor volume for the entire Capomulin regimen\n",
+    "# Correlation coefficient, linear regression model for mouse weight, average observed tumor volume for entire Capomulin regimen\n",
     "weight = capomulin_only.iloc[:,3]\n",
     "volume = capomulin_only.iloc[:,5]\n",
     "correlation = st.pearsonr(weight,volume)\n",
@@ -1311,7 +1239,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "PythonData",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
